# digital_geometry

./: .gitignore  CMakeLists.txt  main.cpp
report/: Report.md
