PROJECT(Helloworld)
SET(CMAKE_PREFIX_PATH "~/Documents/geometry/DGtal/build")

#Required in DGtal
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
set(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(DGtal REQUIRED)
INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})

ADD_EXECUTABLE(target main)
TARGET_LINK_LIBRARIES(target ${DGTAL_LIBRARIES})
